--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
   <body>
     <div class="page">
       <header class="header">
-        <img src="./images/Logo (1).svg" alt="spot logo" class="header__logo" />
+        <img src="./images/Logo.svg" alt="spot logo" class="header__logo" />
       </header>
       <main class="content">
         <section class="profile page__section">
           <img
-            src="./images/Avatar.svg"
+            src="./images/avatar.svg"
             alt="avatar picture"
             class="profile__avatar"
           />
@@ -31,18 +31,16 @@
             <p class="profile__description">Civil Avitor</p>
             <button type="button" class="profile__edit-btn">
               <img src="./images/editlogo.svg" alt="pencil logo" />
-              <div class="profile__btn-text">Edit profile</div>
+              Edit profile
             </button>
           </div>
           <button type="button" class="profile__add-btn">
-            <div class="np__group">
-              <img
-                src="./images/addicon.svg"
-                alt="plus icon"
-                class="profile__icon"
-              />
-              <div class="btn__text">New Post</div>
-            </div>
+            <img
+              src="./images/addicon.svg"
+              alt="plus icon"
+              class="profile__icon"
+            />
+            <p class="profile__add-text">New Post</p>
           </button>
         </section>
         <section class="cards">
@@ -118,7 +116,9 @@
           </ul>
         </section>
       </main>
-      <footer class="footer">2025 &copy; Adhitiya partap singh</footer>
+      <footer>
+        <p class="footer__text">2025 &copy; Adhitiya partap singh</p>
+      </footer>
     </div>
   </body>
 </html>
