--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               alt="plus icon"
               class="profile__icon"
             />
-            <p class="profile__add-text">New Post</p>
+            New Post
           </button>
         </section>
         <section class="cards">
@@ -116,8 +116,8 @@
           </ul>
         </section>
       </main>
-      <footer>
-        <p class="footer__text">2025 &copy; Adhitiya partap singh</p>
+      <footer class="footer">
+        <p>2025 &copy; Adhitiya partap singh</p>
       </footer>
     </div>
   </body>
