--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <main class="content">
         <section class="profile page__section">
           <img
-            src="./images/avatar.svg"
+            src="./images/avatar.jpg"
             alt="avatar picture"
             class="profile__avatar"
           />
@@ -117,7 +117,7 @@
         </section>
       </main>
       <footer class="footer">
-        <p>2025 &copy; Adhitiya partap singh</p>
+        <p class="footer__text">2025 &copy; Adhitiya partap singh</p>
       </footer>
     </div>
   </body>
