--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <main class="content">
         <section class="profile page__section">
           <img
-            src="./images/Avatar.jpg"
+            src="./images/avatar.jpg"
             alt="avatar picture"
             class="profile__avatar"
           />
