--- a/index.html
+++ b/index.html
@@ -151,18 +151,18 @@
           </button>
           <h2 class="modal__title">New Post</h2>
           <form class="modal__form">
-            <label for="card-image-input" class="modal__label"
+            <label for="card-image" class="modal__label"
               >Image link
               <input
-                id="card-image-input"
+                id="card-image"
                 type="url"
                 class="modal__input"
                 placeholder="Paste a link to the picture"
             /></label>
-            <label for="card-Caption-input" class="modal__label"
+            <label for="card-Caption" class="modal__label"
               >Caption
               <input
-                id="card-caption-input"
+                id="card-caption"
                 type="text"
                 class="modal__input"
                 placeholder="Type your caption"
