--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 class="modal__input"
                 placeholder="Paste a link to the picture"
             /></label>
-            <label for="card-Caption" class="modal__label"
+            <label for="card-caption" class="modal__label"
               >Caption
               <input
                 id="card-caption"
