--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <footer class="footer">
         <p class="footer__text">2025 &copy; Adhitiya partap singh</p>
       </footer>
-      <div class="modal">
+      <div class="modal" id="edit-profile-modal">
         <div class="modal__container">
           <button type="button" class="modal__close-btn">x</button>
           <h2 class="modal__title">Edit profile</h2>
@@ -144,7 +144,7 @@
           </form>
         </div>
       </div>
-      <div class="modal modal_is-opened">
+      <div class="modal" id="new-post-modal">
         <div class="modal__container">
           <button type="button" class="modal__close-btn">
             <img src="./images/close.icon.svg" alt="close-icon" />
@@ -172,5 +172,6 @@
         </div>
       </div>
     </div>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
