--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@
       </footer>
       <div class="modal" id="edit-profile-modal">
         <div class="modal__container">
-          <button type="button" class="modal__close-btn">x</button>
+          <button type="button" class="modal__close-btn">
+            <img src="./images/close.icon.svg" alt="close-btn" />
+          </button>
           <h2 class="modal__title">Edit profile</h2>
           <form class="modal__form">
             <label for="profile-name-input" class="modal__label"
