--- a/index.html
+++ b/index.html
@@ -102,14 +102,17 @@
                 type="url"
                 class="modal__input"
                 placeholder="Paste a link to the picture"
+                required
             /></label>
             <label for="card-caption" class="modal__label"
               >Caption
               <input
+                required
                 id="card-caption"
                 type="text"
                 class="modal__input"
                 placeholder="Type your caption"
+                required
             /></label>
             <button type="submit" class="modal__submit-btn">Save</button>
           </form>
@@ -121,7 +124,7 @@
       <div class="modal__image-container">
         <button
           type="button"
-          class="modal__close-btn modal__close_type_preview"
+          class="modal__close-btn modal__close-btn_type_preview"
         >
           <img src="./images/white close.svg" alt="close-icon" />
         </button>
