--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <img src="./images/close.icon.svg" alt="close-btn" />
           </button>
           <h2 class="modal__title">Edit profile</h2>
-          <form class="modal__form" id="card-form">
+          <form class="modal__form" id="card-form" novalidate>
             <label for="profile-name-input" class="modal__label"
               >Name
               <input
@@ -75,7 +75,12 @@
                 type="text"
                 class="modal__input"
                 placeholder="Type your name"
-            /></label>
+                minlength="2"
+                maxlength="40"
+                required
+              />
+              <span id="profile-name-input-error" class="modal__error"></span>
+            </label>
             <label for="profile-description-input" class="modal__label"
               >Description
               <input
@@ -83,7 +88,15 @@
                 type="text"
                 class="modal__input"
                 placeholder="Describe yourself"
-            /></label>
+                minlength="2"
+                maxlength="200"
+                required
+              />
+              <span
+                id="profile-description-input-error"
+                class="modal__error"
+              ></span>
+            </label>
             <button type="submit" class="modal__submit-btn">Save</button>
           </form>
         </div>
@@ -94,7 +107,7 @@
             <img src="./images/close.icon.svg" alt="close-icon" />
           </button>
           <h2 class="modal__title">New Post</h2>
-          <form class="modal__form">
+          <form class="modal__form" novalidate>
             <label for="card-image" class="modal__label"
               >Image link
               <input
@@ -102,8 +115,9 @@
                 type="url"
                 class="modal__input"
                 placeholder="Paste a link to the picture"
-                required
-            /></label>
+                required />
+              <span id="card-image-error" class="modal__error"></span
+            ></label>
             <label for="card-caption" class="modal__label"
               >Caption
               <input
@@ -112,8 +126,11 @@
                 type="text"
                 class="modal__input"
                 placeholder="Type your caption"
-                required
-            /></label>
+                minlength="2"
+                maxlength="200"
+                required />
+              <span id="card-caption-error" class="modal__error"></span
+            ></label>
             <button type="submit" class="modal__submit-btn">Save</button>
           </form>
         </div>
@@ -134,5 +151,6 @@
       </div>
     </div>
     <script src="./scripts/index.js"></script>
+    <script src="./scripts/validation.js"></script>
   </body>
 </html>
